--- a/LearnAkita/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/LearnAkita/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -20,6 +20,9 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/todos-list']">Todos List</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/akita-shop']">Store</a>
+          </li>
         </ul>
       </div>
     </div>
